--- a/static/gameshow.css
+++ b/static/gameshow.css
@@ -3706,6 +3706,19 @@ body.hot-seat-active .hot-seat-display.active {
     line-height: 1.5;
 }
 
+.hot-seat-profile-countdown {
+    font-size: 18px;
+    font-weight: 700;
+    color: #ffd86b;
+    margin-top: 12px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.hot-seat-profile-countdown.hidden {
+    display: none;
+}
+
 .hot-seat-profile-divider {
     width: 100%;
     height: 2px;
